k8s/app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: config
            - secretRef:
                name: aws-secret
            - secretRef:
                name: database-secret
            - secretRef:
                  name: jwt-secret
          image: us-west1-docker.pkg.dev/kubernetes-cluster-458203/project-store/backend:1.9
          name: project-store-backend
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: false
            privileged: false
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      imagePullSecrets:
        - name: gcp-artifact-registry
      restartPolicy: Always
