k8s/app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: backend
