k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: app
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend
            port:
              number: 8080
